--- a/src/voice.html
+++ b/src/voice.html
@@ -40,11 +40,13 @@
   <!-- ヘッダー -->
   <header class="header layout-header js-header">
     <div class="header__inner">
+      <!-- ロゴ -->
       <h1 class="header__logo">
         <a href="./index.html">
           <img src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
       </h1>
+      <!-- ナビゲーション -->
       <nav class="header__nav pc-nav">
         <ul class="pc-nav__items">
           <li class="pc-nav__item">
@@ -97,17 +99,20 @@
           </li>
         </ul>
       </nav>
+      <!-- ハンバーガーボタン -->
       <button class="header__hamburger js-hamburger">
         <span></span>
         <span></span>
         <span></span>
       </button>
+      <!-- ドロワーメニュー -->
       <div class="header__drawer js-drawer">
         <nav class="header__drawer-nav sp-nav">
           <div class="sp-nav__wrap">
             <ul class="sp-nav__items">
               <li class="sp-nav__item">
                 <a href="./campaign.html">キャンペーン</a>
+                <!-- サブナビゲーション -->
                 <ul class="sp-nav__sub-items">
                   <li class="sp-nav__sub-item">
                     <a href="./campaign.html">ライセンス取得</a>
@@ -125,15 +130,16 @@
               </li>
               <li class="sp-nav__item">
                 <a href="./information.html">ダイビング情報</a>
+                <!-- サブナビゲーション -->
                 <ul class="sp-nav__sub-items">
                   <li class="sp-nav__sub-item">
-                    <a href="./information.html">ライセンス講習</a>
+                    <a href="./information.html#tab01">ライセンス講習</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="./information.html">体験ダイビング</a>
+                    <a href="./information.html#tab03">体験ダイビング</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="./information.html">ファンダイビング</a>
+                    <a href="./information.html#tab02">ファンダイビング</a>
                   </li>
                 </ul>
               </li>
@@ -149,15 +155,16 @@
               </li>
               <li class="sp-nav__item">
                 <a href="./price.html">料金一覧</a>
+                <!-- サブナビゲーション -->
                 <ul class="sp-nav__sub-items">
                   <li class="sp-nav__sub-item">
-                    <a href="./price.html">ライセンス講習</a>
+                    <a href="./price.html#priceLicence">ライセンス講習</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="./price.html">体験ダイビング</a>
+                    <a href="./price.html#priceExperience">体験ダイビング</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="./price.html">ファンダイビング</a>
+                    <a href="./price.html#priceFun">ファンダイビング</a>
                   </li>
                 </ul>
               </li>
@@ -208,142 +215,130 @@
         <!-- カードリスト -->
         <div class="archive-voice__items voice-cards">
           <article class="voice-cards__item voice-card">
-            <a href="#">
-              <div class="voice-card__head">
-                <div class="voice-card__content">
-                  <div class="voice-card__meta">
-                    <span class="voice-card__tag">20代(女性)</span>
-                    <span class="voice-card__category">ライセンス講習</span>
-                  </div>
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+            <div class="voice-card__head">
+              <div class="voice-card__content">
+                <div class="voice-card__meta">
+                  <span class="voice-card__tag">20代(女性)</span>
+                  <span class="voice-card__category">ライセンス講習</span>
                 </div>
-                <figure class="voice-card__img">
-                  <img src="../assets/images/top/img-voice01.jpg" alt="">
-                </figure>
+                <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
               </div>
-              <div class="voice-card__body">
-                <p class="voice-card__text">
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                  ここにテキストが入ります。ここにテキストが入ります。
-                </p>
-              </div>
-            </a>
+              <figure class="voice-card__img">
+                <img src="../assets/images/top/img-voice01.jpg" alt="">
+              </figure>
+            </div>
+            <div class="voice-card__body">
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                ここにテキストが入ります。ここにテキストが入ります。
+              </p>
+            </div>
           </article>
           <article class="voice-cards__item voice-card">
-            <a href="#">
-              <div class="voice-card__head">
-                <div class="voice-card__content">
-                  <div class="voice-card__meta">
-                    <span class="voice-card__tag">30代(男性)</span>
-                    <span class="voice-card__category">ファンダイビング</span>
-                  </div>
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+            <div class="voice-card__head">
+              <div class="voice-card__content">
+                <div class="voice-card__meta">
+                  <span class="voice-card__tag">30代(男性)</span>
+                  <span class="voice-card__category">ファンダイビング</span>
                 </div>
-                <figure class="voice-card__img">
-                  <img src="../assets/images/top/img-voice02.jpg" alt="">
-                </figure>
+                <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
               </div>
-              <div class="voice-card__body">
-                <p class="voice-card__text">
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                  ここにテキストが入ります。ここにテキストが入ります。
-                </p>
-              </div>
-            </a>
+              <figure class="voice-card__img">
+                <img src="../assets/images/top/img-voice02.jpg" alt="">
+              </figure>
+            </div>
+            <div class="voice-card__body">
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                ここにテキストが入ります。ここにテキストが入ります。
+              </p>
+            </div>
           </article>
           <article class="voice-cards__item voice-card">
-            <a href="#">
-              <div class="voice-card__head">
-                <div class="voice-card__content">
-                  <div class="voice-card__meta">
-                    <span class="voice-card__tag">30代(女性)</span>
-                    <span class="voice-card__category">体験ダイビング</span>
-                  </div>
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+            <div class="voice-card__head">
+              <div class="voice-card__content">
+                <div class="voice-card__meta">
+                  <span class="voice-card__tag">30代(女性)</span>
+                  <span class="voice-card__category">体験ダイビング</span>
                 </div>
-                <figure class="voice-card__img">
-                  <img src="../assets/images/common/img-voice03.jpg" alt="">
-                </figure>
+                <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
               </div>
-              <div class="voice-card__body">
-                <p class="voice-card__text">
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                  ここにテキストが入ります。ここにテキストが入ります。
-                </p>
-              </div>
-            </a>
+              <figure class="voice-card__img">
+                <img src="../assets/images/common/img-voice03.jpg" alt="">
+              </figure>
+            </div>
+            <div class="voice-card__body">
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                ここにテキストが入ります。ここにテキストが入ります。
+              </p>
+            </div>
           </article>
           <article class="voice-cards__item voice-card">
-            <a href="#">
-              <div class="voice-card__head">
-                <div class="voice-card__content">
-                  <div class="voice-card__meta">
-                    <span class="voice-card__tag">20代(女性)</span>
-                    <span class="voice-card__category">体験ダイビング</span>
-                  </div>
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+            <div class="voice-card__head">
+              <div class="voice-card__content">
+                <div class="voice-card__meta">
+                  <span class="voice-card__tag">20代(女性)</span>
+                  <span class="voice-card__category">体験ダイビング</span>
                 </div>
-                <figure class="voice-card__img">
-                  <img src="../assets/images/common/img-voice04.jpg" alt="">
-                </figure>
+                <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
               </div>
-              <div class="voice-card__body">
-                <p class="voice-card__text">
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                  ここにテキストが入ります。ここにテキストが入ります。
-                </p>
-              </div>
-            </a>
+              <figure class="voice-card__img">
+                <img src="../assets/images/common/img-voice04.jpg" alt="">
+              </figure>
+            </div>
+            <div class="voice-card__body">
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                ここにテキストが入ります。ここにテキストが入ります。
+              </p>
+            </div>
           </article>
           <article class="voice-cards__item voice-card">
-            <a href="#">
-              <div class="voice-card__head">
-                <div class="voice-card__content">
-                  <div class="voice-card__meta">
-                    <span class="voice-card__tag">30代(カップル)</span>
-                    <span class="voice-card__category">ファンダイビング</span>
-                  </div>
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+            <div class="voice-card__head">
+              <div class="voice-card__content">
+                <div class="voice-card__meta">
+                  <span class="voice-card__tag">30代(カップル)</span>
+                  <span class="voice-card__category">ファンダイビング</span>
                 </div>
-                <figure class="voice-card__img">
-                  <img src="../assets/images/common/img-voice05.jpg" alt="">
-                </figure>
+                <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
               </div>
-              <div class="voice-card__body">
-                <p class="voice-card__text">
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                  ここにテキストが入ります。ここにテキストが入ります。
-                </p>
-              </div>
-            </a>
+              <figure class="voice-card__img">
+                <img src="../assets/images/common/img-voice05.jpg" alt="">
+              </figure>
+            </div>
+            <div class="voice-card__body">
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                ここにテキストが入ります。ここにテキストが入ります。
+              </p>
+            </div>
           </article>
           <article class="voice-cards__item voice-card">
-            <a href="#">
-              <div class="voice-card__head">
-                <div class="voice-card__content">
-                  <div class="voice-card__meta">
-                    <span class="voice-card__tag">20代(女性)</span>
-                    <span class="voice-card__category">ライセンス講習</span>
-                  </div>
-                  <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
+            <div class="voice-card__head">
+              <div class="voice-card__content">
+                <div class="voice-card__meta">
+                  <span class="voice-card__tag">20代(女性)</span>
+                  <span class="voice-card__category">ライセンス講習</span>
                 </div>
-                <figure class="voice-card__img">
-                  <img src="../assets/images/common/img-voice06.jpg" alt="">
-                </figure>
+                <h3 class="voice-card__title">ここにタイトルが入ります。ここにタイトル</h3>
               </div>
-              <div class="voice-card__body">
-                <p class="voice-card__text">
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                  ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                  ここにテキストが入ります。ここにテキストが入ります。
-                </p>
-              </div>
-            </a>
+              <figure class="voice-card__img">
+                <img src="../assets/images/common/img-voice06.jpg" alt="">
+              </figure>
+            </div>
+            <div class="voice-card__body">
+              <p class="voice-card__text">
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
+                ここにテキストが入ります。ここにテキストが入ります。
+              </p>
+            </div>
           </article>
         </div>
 
@@ -406,11 +401,13 @@
   <footer class="footer layout-footer">
     <div class="footer__inner inner">
       <div class="footer__logo-wrap">
+        <!-- ロゴ -->
         <div class="footer__logo">
           <a href="./index.html">
             <img src="./assets/images/common/logo.svg" alt="CodeUps">
           </a>
         </div>
+        <!-- SNS -->
         <ul class="footer__sns-items">
           <li class="footer__sns-item">
             <a href="#">
@@ -424,11 +421,13 @@
           </li>
         </ul>
       </div>
+      <!-- ナビゲーション -->
       <nav class="footer__nav">
         <div class="footer__nav-wrap">
           <ul class="footer__nav-items">
             <li class="footer__nav-item">
               <a href="./campaign.html">キャンペーン</a>
+              <!-- サブナビゲーション -->
               <ul class="footer__sub-items">
                 <li class="footer__sub-item">
                   <a href="./campaign.html">ライセンス取得</a>
@@ -448,15 +447,16 @@
           <ul class="footer__nav-items">
             <li class="footer__nav-item">
               <a href="./information.html">ダイビング情報</a>
+              <!-- サブナビゲーション -->
               <ul class="footer__sub-items">
                 <li class="footer__sub-item">
-                  <a href="./information.html">ライセンス講習</a>
+                  <a href="./information.html#tab01">ライセンス講習</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="./information.html">体験ダイビング</a>
+                  <a href="./information.html#tab02">体験ダイビング</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="./information.html">ファンダイビング</a>
+                  <a href="./information.html#tab03">ファンダイビング</a>
                 </li>
               </ul>
             </li>
@@ -472,15 +472,16 @@
             </li>
             <li class="footer__nav-item">
               <a href="./price.html">料金一覧</a>
+              <!-- サブナビゲーション -->
               <ul class="footer__sub-items">
                 <li class="footer__sub-item">
-                  <a href="./price.html">ライセンス講習</a>
+                  <a href="./price.html#priceLicence">ライセンス講習</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="./price.html">体験ダイビング</a>
+                  <a href="./price.html#priceExperience">体験ダイビング</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="./price.html">ファンダイビング</a>
+                  <a href="./price.html#priceFun">ファンダイビング</a>
                 </li>
               </ul>
             </li>
@@ -501,10 +502,12 @@
           </ul>
         </div>
       </nav>
+      <!-- コピーライト -->
       <div class="footer__copyright">
         <small>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
       </div>
     </div>
+    <!-- ページトップボタン -->
     <div class="page-top js-page-top"></div>
   </footer>
 </body>
