--- a/src/campaign.html
+++ b/src/campaign.html
@@ -40,11 +40,13 @@
   <!-- ヘッダー -->
   <header class="header layout-header js-header">
     <div class="header__inner">
+      <!-- ロゴ -->
       <h1 class="header__logo">
         <a href="./index.html">
           <img src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
       </h1>
+      <!-- ナビゲーション -->
       <nav class="header__nav pc-nav">
         <ul class="pc-nav__items">
           <li class="pc-nav__item">
@@ -97,17 +99,20 @@
           </li>
         </ul>
       </nav>
+      <!-- ハンバーガーボタン -->
       <button class="header__hamburger js-hamburger">
         <span></span>
         <span></span>
         <span></span>
       </button>
+      <!-- ドロワーメニュー -->
       <div class="header__drawer js-drawer">
         <nav class="header__drawer-nav sp-nav">
           <div class="sp-nav__wrap">
             <ul class="sp-nav__items">
               <li class="sp-nav__item">
                 <a href="./campaign.html">キャンペーン</a>
+                <!-- サブナビゲーション -->
                 <ul class="sp-nav__sub-items">
                   <li class="sp-nav__sub-item">
                     <a href="./campaign.html">ライセンス取得</a>
@@ -125,15 +130,16 @@
               </li>
               <li class="sp-nav__item">
                 <a href="./information.html">ダイビング情報</a>
+                <!-- サブナビゲーション -->
                 <ul class="sp-nav__sub-items">
                   <li class="sp-nav__sub-item">
-                    <a href="./information.html">ライセンス講習</a>
+                    <a href="./information.html#tab01">ライセンス講習</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="./information.html">体験ダイビング</a>
+                    <a href="./information.html#tab03">体験ダイビング</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="./information.html">ファンダイビング</a>
+                    <a href="./information.html#tab02">ファンダイビング</a>
                   </li>
                 </ul>
               </li>
@@ -149,15 +155,16 @@
               </li>
               <li class="sp-nav__item">
                 <a href="./price.html">料金一覧</a>
+                <!-- サブナビゲーション -->
                 <ul class="sp-nav__sub-items">
                   <li class="sp-nav__sub-item">
-                    <a href="./price.html">ライセンス講習</a>
+                    <a href="./price.html#priceLicence">ライセンス講習</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="./price.html">体験ダイビング</a>
+                    <a href="./price.html#priceExperience">体験ダイビング</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="./price.html">ファンダイビング</a>
+                    <a href="./price.html#priceFun">ファンダイビング</a>
                   </li>
                 </ul>
               </li>
@@ -227,7 +234,7 @@
                 <p class="campaign-card__date">2023/6/1-9/30</p>
                 <p class="campaign-card__contact">ご予約・お問い合わせはコチラ</p>
                 <div class="campaign-card__button">
-                  <a href="#" class="button">Contact us<span></span></a>
+                  <a href="./contact.html" class="button">Contact us<span></span></a>
                 </div>
               </div>
             </div>
@@ -252,7 +259,7 @@
                 <p class="campaign-card__date">2023/6/1-9/30</p>
                 <p class="campaign-card__contact">ご予約・お問い合わせはコチラ</p>
                 <div class="campaign-card__button">
-                  <a href="#" class="button">Contact us<span></span></a>
+                  <a href="./contact.html" class="button">Contact us<span></span></a>
                 </div>
               </div>
             </div>
@@ -277,7 +284,7 @@
                 <p class="campaign-card__date">2023/6/1-9/30</p>
                 <p class="campaign-card__contact">ご予約・お問い合わせはコチラ</p>
                 <div class="campaign-card__button">
-                  <a href="#" class="button">Contact us<span></span></a>
+                  <a href="./contact.html" class="button">Contact us<span></span></a>
                 </div>
               </div>
             </div>
@@ -302,7 +309,7 @@
                 <p class="campaign-card__date">2023/6/1-9/30</p>
                 <p class="campaign-card__contact">ご予約・お問い合わせはコチラ</p>
                 <div class="campaign-card__button">
-                  <a href="#" class="button">Contact us<span></span></a>
+                  <a href="./contact.html" class="button">Contact us<span></span></a>
                 </div>
               </div>
             </div>
@@ -368,11 +375,13 @@
   <footer class="footer layout-footer">
     <div class="footer__inner inner">
       <div class="footer__logo-wrap">
+        <!-- ロゴ -->
         <div class="footer__logo">
           <a href="./index.html">
             <img src="./assets/images/common/logo.svg" alt="CodeUps">
           </a>
         </div>
+        <!-- SNS -->
         <ul class="footer__sns-items">
           <li class="footer__sns-item">
             <a href="#">
@@ -386,11 +395,13 @@
           </li>
         </ul>
       </div>
+      <!-- ナビゲーション -->
       <nav class="footer__nav">
         <div class="footer__nav-wrap">
           <ul class="footer__nav-items">
             <li class="footer__nav-item">
               <a href="./campaign.html">キャンペーン</a>
+              <!-- サブナビゲーション -->
               <ul class="footer__sub-items">
                 <li class="footer__sub-item">
                   <a href="./campaign.html">ライセンス取得</a>
@@ -410,15 +421,16 @@
           <ul class="footer__nav-items">
             <li class="footer__nav-item">
               <a href="./information.html">ダイビング情報</a>
+              <!-- サブナビゲーション -->
               <ul class="footer__sub-items">
                 <li class="footer__sub-item">
-                  <a href="./information.html">ライセンス講習</a>
+                  <a href="./information.html#tab01">ライセンス講習</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="./information.html">体験ダイビング</a>
+                  <a href="./information.html#tab02">体験ダイビング</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="./information.html">ファンダイビング</a>
+                  <a href="./information.html#tab03">ファンダイビング</a>
                 </li>
               </ul>
             </li>
@@ -434,15 +446,16 @@
             </li>
             <li class="footer__nav-item">
               <a href="./price.html">料金一覧</a>
+              <!-- サブナビゲーション -->
               <ul class="footer__sub-items">
                 <li class="footer__sub-item">
-                  <a href="./price.html">ライセンス講習</a>
+                  <a href="./price.html#priceLicence">ライセンス講習</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="./price.html">体験ダイビング</a>
+                  <a href="./price.html#priceExperience">体験ダイビング</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="./price.html">ファンダイビング</a>
+                  <a href="./price.html#priceFun">ファンダイビング</a>
                 </li>
               </ul>
             </li>
@@ -463,10 +476,12 @@
           </ul>
         </div>
       </nav>
+      <!-- コピーライト -->
       <div class="footer__copyright">
         <small>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
       </div>
     </div>
+    <!-- ページトップボタン -->
     <div class="page-top js-page-top"></div>
   </footer>
 </body>
