--- a/src/price.html
+++ b/src/price.html
@@ -40,11 +40,13 @@
   <!-- ヘッダー -->
   <header class="header layout-header js-header">
     <div class="header__inner">
+      <!-- ロゴ -->
       <h1 class="header__logo">
         <a href="./index.html">
           <img src="./assets/images/common/logo.svg" alt="CodeUps">
         </a>
       </h1>
+      <!-- ナビゲーション -->
       <nav class="header__nav pc-nav">
         <ul class="pc-nav__items">
           <li class="pc-nav__item">
@@ -97,17 +99,20 @@
           </li>
         </ul>
       </nav>
+      <!-- ハンバーガーボタン -->
       <button class="header__hamburger js-hamburger">
         <span></span>
         <span></span>
         <span></span>
       </button>
+      <!-- ドロワーメニュー -->
       <div class="header__drawer js-drawer">
         <nav class="header__drawer-nav sp-nav">
           <div class="sp-nav__wrap">
             <ul class="sp-nav__items">
               <li class="sp-nav__item">
                 <a href="./campaign.html">キャンペーン</a>
+                <!-- サブナビゲーション -->
                 <ul class="sp-nav__sub-items">
                   <li class="sp-nav__sub-item">
                     <a href="./campaign.html">ライセンス取得</a>
@@ -125,15 +130,16 @@
               </li>
               <li class="sp-nav__item">
                 <a href="./information.html">ダイビング情報</a>
+                <!-- サブナビゲーション -->
                 <ul class="sp-nav__sub-items">
                   <li class="sp-nav__sub-item">
-                    <a href="./information.html">ライセンス講習</a>
+                    <a href="./information.html#tab01">ライセンス講習</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="./information.html">体験ダイビング</a>
+                    <a href="./information.html#tab03">体験ダイビング</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="./information.html">ファンダイビング</a>
+                    <a href="./information.html#tab02">ファンダイビング</a>
                   </li>
                 </ul>
               </li>
@@ -149,15 +155,16 @@
               </li>
               <li class="sp-nav__item">
                 <a href="./price.html">料金一覧</a>
+                <!-- サブナビゲーション -->
                 <ul class="sp-nav__sub-items">
                   <li class="sp-nav__sub-item">
-                    <a href="./price.html">ライセンス講習</a>
+                    <a href="./price.html#priceLicence">ライセンス講習</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="./price.html">体験ダイビング</a>
+                    <a href="./price.html#priceExperience">体験ダイビング</a>
                   </li>
                   <li class="sp-nav__sub-item">
-                    <a href="./price.html">ファンダイビング</a>
+                    <a href="./price.html#priceFun">ファンダイビング</a>
                   </li>
                 </ul>
               </li>
@@ -199,7 +206,7 @@
       <div class="inner">
         <div class="sub-price__container">
           <!-- 料金ブロック -->
-          <div class="sub-price__block">
+          <div class="sub-price__block" id="priceLicence">
             <h2 class="sub-price__title"><span>ライセンス講習</span></h2>
             <!-- 料金リスト -->
             <dl class="sub-price__items">
@@ -212,7 +219,7 @@
             </dl>
           </div>
           <!-- 料金ブロック -->
-          <div class="sub-price__block">
+          <div class="sub-price__block" id="priceExperience">
             <h2 class="sub-price__title"><span>体験ダイビング</span></h2>
             <!-- 料金リスト -->
             <dl class="sub-price__items">
@@ -228,7 +235,7 @@
           </div>
 
           <!-- 料金ブロック -->
-          <div class="sub-price__block">
+          <div class="sub-price__block" id="priceFun">
             <h2 class="sub-price__title"><span>ファンダイビング</span></h2>
             <!-- 料金リスト -->
             <dl class="sub-price__items">
@@ -303,11 +310,13 @@
   <footer class="footer layout-footer">
     <div class="footer__inner inner">
       <div class="footer__logo-wrap">
+        <!-- ロゴ -->
         <div class="footer__logo">
           <a href="./index.html">
             <img src="./assets/images/common/logo.svg" alt="CodeUps">
           </a>
         </div>
+        <!-- SNS -->
         <ul class="footer__sns-items">
           <li class="footer__sns-item">
             <a href="#">
@@ -321,11 +330,13 @@
           </li>
         </ul>
       </div>
+      <!-- ナビゲーション -->
       <nav class="footer__nav">
         <div class="footer__nav-wrap">
           <ul class="footer__nav-items">
             <li class="footer__nav-item">
               <a href="./campaign.html">キャンペーン</a>
+              <!-- サブナビゲーション -->
               <ul class="footer__sub-items">
                 <li class="footer__sub-item">
                   <a href="./campaign.html">ライセンス取得</a>
@@ -345,15 +356,16 @@
           <ul class="footer__nav-items">
             <li class="footer__nav-item">
               <a href="./information.html">ダイビング情報</a>
+              <!-- サブナビゲーション -->
               <ul class="footer__sub-items">
                 <li class="footer__sub-item">
-                  <a href="./information.html">ライセンス講習</a>
+                  <a href="./information.html#tab01">ライセンス講習</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="./information.html">体験ダイビング</a>
+                  <a href="./information.html#tab02">体験ダイビング</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="./information.html">ファンダイビング</a>
+                  <a href="./information.html#tab03">ファンダイビング</a>
                 </li>
               </ul>
             </li>
@@ -369,15 +381,16 @@
             </li>
             <li class="footer__nav-item">
               <a href="./price.html">料金一覧</a>
+              <!-- サブナビゲーション -->
               <ul class="footer__sub-items">
                 <li class="footer__sub-item">
-                  <a href="./price.html">ライセンス講習</a>
+                  <a href="./price.html#priceLicence">ライセンス講習</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="./price.html">体験ダイビング</a>
+                  <a href="./price.html#priceExperience">体験ダイビング</a>
                 </li>
                 <li class="footer__sub-item">
-                  <a href="./price.html">ファンダイビング</a>
+                  <a href="./price.html#priceFun">ファンダイビング</a>
                 </li>
               </ul>
             </li>
@@ -398,10 +411,12 @@
           </ul>
         </div>
       </nav>
+      <!-- コピーライト -->
       <div class="footer__copyright">
         <small>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</small>
       </div>
     </div>
+    <!-- ページトップボタン -->
     <div class="page-top js-page-top"></div>
   </footer>
 </body>
